# recallsnippet

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: CLAUDE.md
.claude/docs/: CHECKLIST.md  DESIGN.md  PRD.md  ollama-guide.md  plan-1.0.1.md  plan-4.3-1.md  plan-4_3.md  plan-readme.md
.claude/docs/implementation-notes/: 2026-02-07_phase-2-1_snippet-crud-backend.md  2026-02-07_phase-2-2_tag-crud-backend.md  2026-02-09_phase-2-3_frontend-types-api.md  2026-02-09_phase-2-4_frontend-components.md  2026-02-09_phase-2-5_homepage-integration.md  2026-02-09_phase-3-1_ollama-integration.md  2026-02-09_phase-3-2_embedding-pipeline.md  2026-02-09_phase-3-3_semantic-search.md  2026-02-09_phase-3-4_ai-autocomplete.md  (+18 more)
.claude/skills/: ai-pipeline.md  react-frontend.md  tauri-rust.md  testing.md
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/ai/: embedding.rs  mod.rs  ollama.rs
src-tauri/src/commands/: ai.rs  mod.rs  search.rs  settings.rs  snippet.rs  tag.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/models/: mod.rs  settings.rs  snippet.rs
src/contexts/: AppContext.tsx
src/hooks/: useAI.ts  useKeyboardShortcuts.ts  useSearch.ts  useSettings.ts  useSnippets.test.tsx  useSnippets.ts  useTags.ts  useTheme.ts
src/lib/: language-colors.ts  tauri.ts  types.ts
src/pages/: HomePage.test.tsx  HomePage.tsx
(+34 files in other folders)
