[package]
name = "recallsnippet"
version = "0.1.0"
description = "Local AI-powered code snippet & knowledge base for developers"
authors = ["jeffseongjunkim"]
edition = "2021"

[lib]
name = "recallsnippet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Ollama API
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Platform-specific directories
dirs = "6"

[dev-dependencies]
tempfile = "3"

